--- a/src/app/post/containers/post-page/post-page.component.html
+++ b/src/app/post/containers/post-page/post-page.component.html
@@ -1,5 +1,5 @@
 <header class="header">
-    <h1>Posts of jsonplaceholder </h1>
+    <h1>Posts from jsonplaceholder </h1>
 </header>
 
 <app-post [posts] = "posts$ | async"></app-post>
